# fuzzy-ads

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
fuzzy_ads/: cli.py  query.py
tests/: test_ads_cli.py
